--- a/webbasics/queer authors and titles.html
+++ b/webbasics/queer authors and titles.html
@@ -17,7 +17,7 @@
         <table>
             <tr>
                 <th>Author</th>
-                <th>Pseudonym</th>
+                <th>Pseudonym(s)</th>
                 <th>Title(s)</th>
                 <th>Year</th>
             </tr>
@@ -30,7 +30,7 @@
             <tr>
                 <td>Marijane Meaker</td>
                 <td>Vin Packer; M.E. Kerr; Ann Aldrich</td>
-                <td><i>Spring Fire</i>, <i>We Walk Alone</i></td>
+                <td><i>Spring Fire</i>; <i>We Walk Alone</i></td>
                 <td>1952, 1955</td>
             </tr>
             <tr>
@@ -42,7 +42,7 @@
             <tr>
                 <td>Ann Weldy</td>
                 <td>Ann Bannon</td>
-                <td><i>Odd Girl Out, I Am a Woman, Women in the Shadows, Beebo Brinker</i></td>
+                <td><i>Odd Girl Out; I Am a Woman; Women in the Shadows; Beebo Brinker</i></td>
                 <td>1957, 1959, 1959, 1962</td>
             </tr>
             <tr>
@@ -52,9 +52,9 @@
                 <td>1960</td>
             </tr>
             <tr>
+                <td>Velma Nacella Young</td>
                 <td>Valerie Taylor</td>
-                <td>none</td>
-                <td><i>The Girls in 3-B, Whisper Their Love, Stranger on Lesbos</i></td>
+                <td><i>The Girls in 3-B; Whisper Their Love; Stranger on Lesbos</i></td>
                 <td>1959, 1957, 1963, 1960</td>
             </tr>
         </table>
