--- a/webbasics/author.html
+++ b/webbasics/author.html
@@ -33,7 +33,8 @@
             <li>Lesbian pulp fiction across the pond</li>
         </ul>
 
-        <img class="biopic" src="Lauren Holmes.jpg" alt="young woman">
+        <img class="biopic" src="https://media.licdn.com/dms/image/v2/D4D03AQFdDwcYaHDtPA/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1719266910641?e=1749081600&v=beta&t=8BfmQvJ43yG0-Ftx8Fiu2nUOUZYvEKfVOBJlbPZXxuk" 
+        alt="young woman with dyed red hair">
 
         <p><a href="https://www.linkedin.com/in/lauren-holmes-57707a316">Lauren's LinkedIn</a></p>
 
