--- a/webbasics/author.html
+++ b/webbasics/author.html
@@ -20,10 +20,10 @@
         NYU, she is currently a Library and Information Science graduate student at Pratt Institute, fascinated by queer affect and archiving, while working 
         at the New York Public Library as a Collections Processing Associate.</p>
 
-        <p>Her research in this topic began while working as a graduate student at NYU Special Collections and taking a Writing Gender Histories course 
-        with Dr. Michele Mitchell. Her thesis, titled: "(non)normative bodies and affect: the value of lesbian pulp fiction" focuses more on affect and embodiment of
-        characters in lesbian pulp fiction, primarily masculine female characters, so this page acts as a preliminary and introductory understanding of what lesbian 
-        pulp fiction is and the more obvious discussion and questions in this niche, semi-dying field. </p>
+        <p>Her research in this topic began while working as a graduate student at NYU Special Collections and taking "Writing Gender Histories"  
+        with Dr. Michele Mitchell. Her thesis, titled: "(Non)Normative Bodies and Affect: the Value of Lesbian Pulp Fiction" explores affect and embodiment of
+        lesbian pulp fiction characters, primarily masculine female characters (or butches). This page acts as a preliminary and introductory understanding of what lesbian 
+        pulp fiction is and the more common discussions and questions in this niche, semi-dying field. </p>
 
         <h3>Upcoming Article Topics:</h3> 
         <ul>
