--- a/webbasics/index.html
+++ b/webbasics/index.html
@@ -108,7 +108,7 @@
 
                                 
     <footer>                           
-        <div class="footer">Lauren Holmes &copy; 2025</div>                    
+        <p class="footer"> Lauren Holmes &copy 2025</p>
     </footer>
                          
  </html>
