--- a/webbasics/index.html
+++ b/webbasics/index.html
@@ -97,11 +97,13 @@
                         <li>
                             Marijane Meaker and Patricia Highsmith had a several years long relationship in the 1950s and 1960s, narrativized in Meaker's memoir 
                         <i>Highsmith: A Romance of the 1950s</i> (2003).
-                    </li>
+                        </li>
                     </ul>
                 </li>
                 <li>
-                    <i>Women's Barracks</i> by Tereska Torres (1950)</li>
+                    <i>Women's Barracks</i> by Tereska Torres (1950)
+                </li>
+                <li>
                     <ul>
                         <li>
                             <i>Women's Barracks</i> is a semi-memoir of Torres' time in London during WWII, the first lesbian pulp to cross the Atlantic. 
