--- a/webbasics/index.html
+++ b/webbasics/index.html
@@ -80,7 +80,6 @@
                 <li>
                     <i>The Price of Salt</i> or <i>Carol</i> by Patricia Highsmith, published under Claire Morgan (1952)
                 </li>
-                <li>
                     <ul>
                         <li>
                             While arguably the most well known lesbian pulp, Highsmith is not known (nor would have wanted to be known) as a pulp author. 
@@ -92,7 +91,6 @@
                 <li>
                     <i>Spring Fire</i> by Marijane Meaker, published under Vin Packer (1952)
                 </li>
-                <li>
                     <ul>
                         <li>
                             Marijane Meaker and Patricia Highsmith had a several years long relationship in the 1950s and 1960s, narrativized in Meaker's memoir 
@@ -101,9 +99,7 @@
                     </ul>
                 </li>
                 <li>
-                    <i>Women's Barracks</i> by Tereska Torres (1950)
-                </li>
-                <li>
+                    <i>Women's Barracks</i> by Tereska Torres (1950)</li>
                     <ul>
                         <li>
                             <i>Women's Barracks</i> is a semi-memoir of Torres' time in London during WWII, the first lesbian pulp to cross the Atlantic. 
