--- a/webbasics/queer-authors-and-titles.html
+++ b/webbasics/queer-authors-and-titles.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" type="text/css" href="styles.css"> 
     </head>
 
-    <body>
+    <body class="font">
         
         <div id="header">
             <h1>The Golden Era of Lesbian Pulp Fiction:</h1>
