--- a/webbasics/author.html
+++ b/webbasics/author.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="styles.css"> 
     </head>
 
-    <body>
+    <body class="font">
         <div id="header">
             <h1>The Golden Era of Lesbian Pulp Fiction:</h1>
             <h3>About the Author: Lauren Holmes</h3>
