--- a/russian/russian.html
+++ b/russian/russian.html
@@ -145,7 +145,6 @@
             </ul>
             <img src="https://media.hswstatic.com/eyJidWNrZXQiOiJjb250ZW50Lmhzd3N0YXRpYy5jb20iLCJrZXkiOiJnaWZcL3RoZS10d2lzdC0yLmpwZyIsImVkaXRzIjp7InJlc2l6ZSI6eyJ3aWR0aCI6MjkwfSwidG9Gb3JtYXQiOiJhdmlmIn19" class="russian-img3" alt="man and woman dancing the Twist">
         </div>
-
       
         <div class="full-width-heading">
           <h3>Explore Spotify!</h3>
@@ -186,7 +185,7 @@
         <p>Steinholt, Yngvar Bordrewich. (2004). Rock in Reservation. [Doctoral dissertation, University of 
             Tromsø]. The Arctic University of Norway.</p> 
       </div>
-
+</div>
     <div id="footer">
             <p>© Holmes Ray Guerrera 2025</p>
     </div>
