--- a/russian/russian.html
+++ b/russian/russian.html
@@ -152,18 +152,18 @@
         </div>
 
       <div class="grid-20">
-        <div class="grid-box"><iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/3OCZhm9zNElyNJNrwG9pC4?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
-        <div class="grid-box"><iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/3nAumcukmBxn8y7Su8RagW?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
-        <div class="grid-box"><iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/6JiSmfyZVQIpW80qJQOmIg?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
-        <div class="grid-box"><iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/6oO3QiWdVj5FZQwbdRtsRh?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
-        <div class="grid-box"><iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/2jkl2xJVm71azWAgZKyf42?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
-        <div class="grid-box"><iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/6UvQrW56NzLbUtAKIdTg8N?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
-        <div class="grid-box"><iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/2Ktp0aQBfLtTqUE1p3CwUr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
-        <div class="grid-box"><iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/0YCqg8X5gx0MremW64Ud1h?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
-        <div class="grid-box"><iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/7FHG2jA8qsPQjvZgoZJVn0" width="100%" height="352" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe></div>
+        <div class="grid-box"><iframe class="topartist" src="https://open.spotify.com/embed/artist/3OCZhm9zNElyNJNrwG9pC4?utm_source=generator" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
+        <div class="grid-box"><iframe class="topartist" src="https://open.spotify.com/embed/artist/3nAumcukmBxn8y7Su8RagW?utm_source=generator" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
+        <div class="grid-box"><iframe class="topartist" src="https://open.spotify.com/embed/artist/6JiSmfyZVQIpW80qJQOmIg?utm_source=generator" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
+        <div class="grid-box"><iframe class="topartist" src="https://open.spotify.com/embed/artist/6oO3QiWdVj5FZQwbdRtsRh?utm_source=generator" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
+        <div class="grid-box"><iframe class="topartist" src="https://open.spotify.com/embed/artist/2jkl2xJVm71azWAgZKyf42?utm_source=generator" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
+        <div class="grid-box"><iframe class="topartist" src="https://open.spotify.com/embed/artist/6UvQrW56NzLbUtAKIdTg8N?utm_source=generator" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
+        <div class="grid-box"><iframe class="topartist" src="https://open.spotify.com/embed/artist/2Ktp0aQBfLtTqUE1p3CwUr?utm_source=generator" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
+        <div class="grid-box"><iframe class="topartist" src="https://open.spotify.com/embed/artist/0YCqg8X5gx0MremW64Ud1h?utm_source=generator" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></div>
+        <div class="grid-box"><iframe class="topartist" src="https://open.spotify.com/embed/artist/7FHG2jA8qsPQjvZgoZJVn0" allow="encrypted-media"></iframe></div>
     </div>
 
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6qv7CRaZr9nJaamM8Xtrv6?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <iframe class="topartist" src="https://open.spotify.com/embed/playlist/6qv7CRaZr9nJaamM8Xtrv6?utm_source=generator" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
       <div class="column1">
         <h3>More Resources</h3>
